# Avionics-system-cross-platform

./: .gitignore  CMakeLists.txt  DevelopmentLog.md  main.cpp
src/: test.cpp  test.h
src/Client/: Client.cpp  Client.h
src/Gateway/: Gateway.cpp  Gateway.h
src/Registry/: ServiceRegistry.cpp  ServiceRegistry.h  merklecpp.h
src/Server/: Server.h
src/client/: Client.cpp  Client.h
src/common/: Args.h  Request.h  Service.h
src/server/: Server.cpp
